kub/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  labels:
    app: custom-app
spec:
  containers:
  - name: app
    image: custom-app:latest
    imagePullPolicy: Never  # Используем локальный образ
    ports:
    - containerPort: 5000
    volumeMounts:
    - name: logs-volume
      mountPath: /app/logs
  volumes:
  - name: logs-volume
    emptyDir: {}
