kub/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: custom-app
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
