kub/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: journal-virtualservice
  namespace: journal
spec:
  hosts:
  - "*"
  gateways:
  - journal-gateway
  http:
  - match:
    - uri:
        exact: "/"
    - uri:
        exact: "/status"
    - uri:
        prefix: "/logs"
    - uri:
        exact: "/metrics"
    route:
    - destination:
        host: journal-api-service
        port:
          number: 80
  - match:
    - uri:
        exact: "/log"
      method:
        exact: "POST"
    route:
    - destination:
        host: journal-api-service
        port:
          number: 80
    timeout: 1s
    retries:
      attempts: 2
      perTryTimeout: 0.5s
    fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 2s
  - route:
    - destination:
        host: journal-api-service
        port:
          number: 80
    fault:
      abort:
        percentage:
          value: 100
        httpStatus: 404
